fixed weird overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,8 @@
 
 html {
   scroll-behavior: smooth;
+  padding-right: 0px !important;
+  overflow: visible !important;
   overflow-y: auto;
 }
 
